[tool.poetry]
name = "crypto-data-loader"
version = "0.1.0"
description = ""
authors = ["Aleksei Gruzdev <algruwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-okx = "^0.2.1"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
celery = "^5.3.4"
flower = "^2.0.1"
pydantic-settings = "^2.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
